<resources>
    <string name="app_name">WhoKonws</string>
    <string name="sign_in">Sign In</string>
    <string name="explore">Explore</string>
    <string name="email_address">Email address or username</string>
    <string name="password">Password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="profile">Profile</string>
    <string name="full_name">Full name</string>
    <string name="register_here">You need sign up? tap here</string>
    <string name="btn_close_content">btn close content</string>
    <string name="register">Register</string>
    <string name="sign_out">Sign Out</string>
    <string name="phone_number">Phone number</string>
    <string name="create_room">Create room</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="remaining_time">Time in minute</string>
    <string name="form_cant_empty">Sorry forms can\'t be empty!</string>
    <string name="invalid_input">Invalid input system error.</string>
    <string name="topic">Topic</string>
    <string name="find_room">find room</string>
    <string name="room_id">Enter room id</string>
    <string name="menu">menu</string>
    <string name="join_room">Join a room</string>
    <string name="room">Room</string>
    <string name="take_room">take room</string>
    <string name="take_quiz">take quiz</string>
    <string name="add_quiz">add quiz</string>
    <string name="enter_question">Enter question</string>
    <string name="enter_option_e">Enter option E</string>
    <string name="enter_option_d">Enter option D</string>
    <string name="enter_option_c">Enter option C</string>
    <string name="enter_option_b">Enter option B</string>
    <string name="enter_option_a">Enter option A</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="answer">Answer</string>
    <string name="complete_room_pls">Please complete the room by adding more questions!</string>
    <string name="question">Question</string>
    <string name="next">next</string>
    <string name="finish">finish</string>
    <string name="participate">Participate</string>
    <string name="new_question">new question</string>
    <string name="_continue">continue</string>
    <string name="result">Result</string>
    <string name="content_description_end_icon">content_description</string>
    <string name="empty">Empty</string>
    <string name="options">Options</string>
    <string name="_30_min">30 min</string>
    <string name="publish">Publish</string>
    <string name="room_id_copy">room id</string>
    <string name="open">open</string>
    <string name="delete">Delete</string>
    <string name="uncompleted">uncompleted</string>
    <string name="view">view</string>
    <string name="completed">completed</string>
    <string name="sample_question">Bagaiimana cara mnemukan jalan karir yang benar?</string>
    <string name="edit_profile">Edit profile</string>
    <string name="about">About</string>
</resources>