<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/question"
            android:textSize="16sp"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_question"
            app:startIconDrawable="@drawable/ic_baseline_psychology_24"
            android:hint="@string/enter_question"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
            <com.google.android.material.textfield.TextInputEditText android:inputType="textNoSuggestions" android:lines="3" android:layout_width="match_parent" android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:text="@string/options"
            android:textSize="16sp"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_opt_a"
            app:startIconDrawable="@drawable/ic_baseline_assistant_24"
            android:hint="@string/enter_option_a"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
            <com.google.android.material.textfield.TextInputEditText android:inputType="textNoSuggestions" android:layout_width="match_parent" android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_opt_b"
            app:startIconDrawable="@drawable/ic_baseline_assistant_24"
            android:hint="@string/enter_option_b"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
            <com.google.android.material.textfield.TextInputEditText android:inputType="textNoSuggestions" android:layout_width="match_parent" android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_opt_c"
            app:startIconDrawable="@drawable/ic_baseline_assistant_24"
            android:hint="@string/enter_option_c"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
            <com.google.android.material.textfield.TextInputEditText android:inputType="textNoSuggestions" android:layout_width="match_parent" android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_opt_d"
            app:startIconDrawable="@drawable/ic_baseline_assistant_24"
            android:hint="@string/enter_option_d"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
            <com.google.android.material.textfield.TextInputEditText android:inputType="textNoSuggestions" android:layout_width="match_parent" android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_opt_e"
            app:startIconDrawable="@drawable/ic_baseline_assistant_24"
            android:hint="@string/enter_option_e"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
            <com.google.android.material.textfield.TextInputEditText android:inputType="textNoSuggestions" android:layout_width="match_parent" android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:text="@string/answer"
            android:textSize="16sp"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggleOptionsQuiz"
            app:selectionRequired="true"
            app:singleSelection="true"
            android:paddingHorizontal="16dp"
            android:weightSum="5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button android:id="@+id/btn_opt_a" android:layout_weight="1" android:layout_width="0dp" android:layout_height="wrap_content"
                android:text="@string/a" style="?attr/materialButtonOutlinedStyle" />
            <Button android:id="@+id/btn_opt_b" android:layout_weight="1" android:layout_width="0dp" android:layout_height="wrap_content"
                android:text="@string/b" style="?attr/materialButtonOutlinedStyle" />
            <Button android:id="@+id/btn_opt_c" android:layout_weight="1" android:layout_width="0dp" android:layout_height="wrap_content"
                android:text="@string/c" style="?attr/materialButtonOutlinedStyle" />
            <Button android:id="@+id/btn_opt_d" android:layout_weight="1" android:layout_width="0dp" android:layout_height="wrap_content"
                android:text="@string/d" style="?attr/materialButtonOutlinedStyle" />
            <Button android:id="@+id/btn_opt_e" android:layout_weight="1" android:layout_width="0dp" android:layout_height="wrap_content"
                android:text="@string/e" style="?attr/materialButtonOutlinedStyle" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_create_quiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:text="@string/add_quiz" />
    </LinearLayout>
</ScrollView>