<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_explore"
        android:text="@string/explore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout android:id="@+id/contentLogin"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_marginHorizontal="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/space_divider">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_email_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_baseline_person_24"
            app:startIconContentDescription="@string/content_description_end_icon"
            app:endIconMode="clear_text"
            android:hint="@string/email_address"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense">
            <com.google.android.material.textfield.TextInputEditText android:inputType="textNoSuggestions" android:layout_width="match_parent" android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <Space android:layout_width="match_parent" android:layout_height="16dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_password"
            app:startIconDrawable="@drawable/ic_baseline_vpn_key_24"
            app:startIconContentDescription="@string/content_description_end_icon"
            app:endIconMode="password_toggle"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense">
            <com.google.android.material.textfield.TextInputEditText android:inputType="textPassword" android:layout_width="match_parent" android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout android:id="@+id/contentRegister"
        android:visibility="gone"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_full_name"
            app:startIconDrawable="@drawable/ic_baseline_person_24"
            app:endIconMode="clear_text"
            android:hint="@string/full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
            <com.google.android.material.textfield.TextInputEditText android:inputType="textNoSuggestions" android:layout_width="match_parent" android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <Space android:layout_width="match_parent" android:layout_height="16dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_email_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_baseline_email_24"
            app:endIconMode="clear_text"
            android:hint="@string/email_address"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
            <com.google.android.material.textfield.TextInputEditText android:inputType="textEmailAddress|textNoSuggestions" android:layout_width="match_parent" android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <Space android:layout_width="match_parent" android:layout_height="16dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_phone"
            app:startIconDrawable="@drawable/ic_baseline_call_24"
            app:endIconMode="clear_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
            <com.google.android.material.textfield.TextInputEditText android:inputType="number|textNoSuggestions" android:layout_width="match_parent" android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <Space android:layout_width="match_parent" android:layout_height="16dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/new_password"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_baseline_vpn_key_24"
            android:hint="@string/enter_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
            <com.google.android.material.textfield.TextInputEditText android:inputType="textNoSuggestions|textPassword" android:layout_width="match_parent" android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <Space android:layout_width="match_parent" android:layout_height="16dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirm_password"
            app:startIconDrawable="@drawable/ic_baseline_vpn_key_24"
            app:endIconMode="clear_text"
            android:inputType="textNoSuggestions"
            android:hint="@string/confirm_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
            <com.google.android.material.textfield.TextInputEditText android:layout_width="match_parent" android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginVertical="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView android:id="@+id/btn_close_content"
            android:visibility="gone"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:padding="16dp"
            android:contentDescription="@string/btn_close_content"
            app:tint="@color/design_default_color_primary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_in"
            android:text="@string/sign_in"
            android:layout_width="wrap_content"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/btn_footer"
        style="@style/Widget.MaterialComponents.TextView"
        android:layout_marginVertical="16dp"
        android:text="@string/register_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>