<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include android:id="@+id/contentJoin"
        android:visibility="gone"
        layout="@layout/fragment_room_join"/>

    <include layout="@layout/card_header_quiz"/>

    <LinearLayout android:id="@+id/contentList"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_add_room_quiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:text="@string/new_question"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/mRecyclerView"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <LinearLayout android:id="@+id/contentPublicRoom"
        android:visibility="gone"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginVertical="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView android:id="@+id/btn_close_content"
            android:src="@drawable/ic_baseline_power_settings_new_24"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:padding="16dp"
            android:contentDescription="@string/btn_close_content"
            app:tint="@color/design_default_color_primary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_take_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/participate"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
    </LinearLayout>
</LinearLayout>